dnl Process this file with autoconf to produce a configure script.

AC_INIT(Makefile.in)

dnl Checks for compiler
AC_PROG_CC
AC_PROG_F77(f77 g77 xlf cf77 cft77 pgf77 fl32 af77 fort77 f90 xlf90 pgf90 epcf90 f95 xlf95 lf95 g95 fc fort ifc ifort)

dnl Checks for support programs
AC_CHECK_PROGS(AUTOCONF,	autoconf)
AC_CHECK_PROGS(GZIP,		gzip)
AC_CHECK_PROGS(TAR,		tar)

dnl Compaq/DEC Alpha systems need the Fortran -fpe3 flag to get
dnl nonstop IEEE 754 behavior; without it, NaN and Infinity terminate
dnl the process, sigh...
if test "`uname -m`" = "alpha"
then
	if test "`uname -s`" = "Linux"
	then
		case $CC in
			cc|gcc|g++)	CEXTRA="$CEXTRA -mieee" ;;
		esac
		case $F77 in
			f77|g77)	FEXTRA="$FEXTRA -mieee" ;;
			fort)		FEXTRA="$FEXTRA -fpe3" ;;
		esac
	elif test "`uname -s`" = "OSF1"
	then
		case $CC in
			cc|c89|cxx*)	CEXTRA="$CEXTRA -ieee" ;;
			gcc|g++)	CEXTRA="$CEXTRA -mieee" ;;
		esac
		case $F77 in
			f77|f90|f95)	FEXTRA="$FEXTRA -fpe3" ;;
			g77)		FEXTRA="$FEXTRA -mieee" ;;
		esac
	fi
fi

dnl The IBM Fortran 90 and 95 compilers need switches to select
dnl fixed-form input.
if test "`uname -s`" = "AIX"
then
	case $F77 in
		xlf90|xlf95)	FEXTRA="$FEXTRA -qfixed" ;;
	esac
fi

dnl The NAG Fortran 90 and 95 compilers need switches to select
dnl fixed-form input, and to use IEEE 754-conformant arithmetic.
if test "$F77" = "nagf90" -o  "$F77" = "nagf95"
then
	FEXTRA="$FEXTRA -ieee=full -fixed"
fi

dnl The SGI IRIX 5.3 f77 compiler needs -Wf,-Idirname instead of
dnl -Idirname, sigh...
if test "`uname -s`" = "IRIX" -a "$F77" = "f77"
then
	AC_CACHE_CHECK(for SGI IRIX 5.x f77 include option,
		my_ac_cv_need_sgi5_include,
		[
	cat <<EOF >conftest.f
      include 'stdio.inc'
      end
EOF
		if f77 -Wf,-I../common -c conftest.f 1>/dev/null 2>&1
		then
			my_ac_cv_need_sgi5_include=yes
		else
			my_ac_cv_need_sgi5_include=no
		fi
	])
	if test "$my_ac_cv_need_sgi5_include" = yes
	then
		FINC="$FINC -Wf,-I../common"
	fi
fi

dnl Sun f90 and f95 foolishly default to stop-on-trap behavior, so
dnl force nonstop computation.
if test "`uname -s`" = "SunOS"
then
	case $F77 in
		f90|f95)	FEXTRA="$FEXTRA -ftrap=%none" ;;
	esac
fi

dnl Compilation on GNU/Linux Intel x86 with Lahey lf95 unfortunately
dnl requires runtime flags to prevent termination on numeric
dnl exceptions, and even then, terminates on quadruple-precision
dnl underflow, sigh...
if test "`uname -s`" = "Linux" -a "$F77" = "lf95"
then
	RUNFLAGS=-Wl,-i
else
 	RUNFLAGS=
fi

AC_SUBST(CEXTRA)
AC_SUBST(FEXTRA)
AC_SUBST(FINC)
AC_SUBST(RUNFLAGS)

dnl Remove -O2 from CFLAGS gratuitously inserted by configure.
CFLAGS="`echo $CFLAGS | sed -e 's/-O2 //g' -e 's/ -O2$//g' -e 's/^-O2$//'`"

dnl Remove -g from CFLAGS gratuitously inserted by configure.
CFLAGS="`echo $CFLAGS | sed -e 's/-g //g' -e 's/ -g$//g' -e 's/^-g$//'`"

AC_OUTPUT(Makefile)
