AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(nomad_kdev, 3.4.0)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_RANLIB

AM_CONDITIONAL([MPI_INSTALLED], command -v mpic++ )

#AC_CONFIG_FILES([Makefile nomad_mpi/Makefile nomad_scalar/Makefile])

AC_OUTPUT(Makefile nomad_mpi/Makefile nomad_scalar/Makefile)
